--- a/layout.html
+++ b/layout.html
@@ -65,7 +65,7 @@
         </main><aside>
         <picture id="foto"> <img src="image/logo.jpg" alt="" width="290px" height="290px">
         </picture>
-        <p>description of qualitions of client</p>
+        <p>description of qualitions of Client</p>
         </aside>
     </div>
     
